--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-
+android.useAndroidX=true
+android.enableJetifier=true
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.15.6-hotspot
